--- a/web/src/screens/sign_up/signUp.css
+++ b/web/src/screens/sign_up/signUp.css
@@ -1,26 +1,27 @@
-.login {
+.sign-up {
   background-color: var(--white);
   border-radius: 20px;
   padding: 30px 40px;
   text-align: center;
+  min-width: 320px;
 }
 
-.title-login {
+.title-signup {
   color: var(--black);
-  margin: 0 0 45px 0;
+  margin: 0 0 30px 0;
   line-height: 58px;
 }
 
-.inputs-login {
+.inputs-signup {
   display: flex;
   flex-direction: column;
 }
 
-.input-login {
+.input-signup {
   margin-left: 10px;
 }
 
-.div-input-login {
+.div-input-signup {
   border-radius: 10px;
   border-width: 1px;
   border-color: var(--gray);
@@ -29,14 +30,20 @@
   display: flex;
   align-items: center;
 }
-.div-input-login:nth-child(1) {
-  margin-bottom: 15px;
+.div-input-signup:nth-child(1) {
+  margin-bottom: 8px;
 }
-.div-input-login:nth-child(2) {
+.div-input-signup:nth-child(2) {
+  margin-bottom: 20px;
+}
+.div-input-signup:nth-child(3) {
+  margin-bottom: 8px;
+}
+.div-input-signup:nth-child(4) {
   margin-bottom: 30px;
 }
 
-.signup-message-login {
+.login-message-signup {
   display: flex;
   flex-direction: row;
   align-items: center;
