--- a/website/web/template/base.templ
+++ b/website/web/template/base.templ
@@ -1,14 +1,5 @@
 package template
 
-templ base(title string) {
-	@doctype() {
-		@head(title)
-		@body() {
-			{ children... }
-		}
-	}
-}
-
 templ doctype() {
 	<!DOCTYPE html>
 	<html lang="pt-BR">
@@ -21,6 +12,11 @@ templ head(title string) {
 		<meta charset="UTF-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<title>{ title }</title>
+		<link
+			rel="icon"
+			type="image/png"
+			href="https://icons.iconarchive.com/icons/icons8/windows-8/256/Animals-Cat-Track-icon.png"
+		/>
 		<link rel="stylesheet" href="/static/css/pico.min.css"/>
 		<script type="module" src="/static/js/htmx.min.js"></script>
 		{ children... }
