--- a/website/web/template/user_login.templ
+++ b/website/web/template/user_login.templ
@@ -9,8 +9,7 @@ templ UserLogin() {
           flex-direction: column;
           justify-content: center;
           align-items: center;
-          min-width: 100vw;
-          min-height: 100vh;
+          height: 100vh;
         }
       </style>
 		}
