feat(web): a bunch of changes
- Add assets directory
- Improve error messages
- Fix bug of deleting pet but not updating pet counter
- Split move pet card to its own file

--- a/website/web/static/css/pet_list.css
+++ b/website/web/static/css/pet_list.css
@@ -8,6 +8,7 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 15px;
+  width: 100%;
 }
 
 .pet-num {
@@ -26,8 +27,9 @@
 }
 
 .pets-container {
-  max-height: 400px;
-  overflow-y: auto;
+  max-height: 370px;
+  overflow-y: scroll;
+  scrollbar-width: none;
   padding-bottom: 10px;
 }
 
