--- a/website/web/template/user_card.templ
+++ b/website/web/template/user_card.templ
@@ -9,11 +9,11 @@ type UserData struct {
 	Pets  []models.Pet
 }
 
-templ UserCard(data *UserData) {
+templ userCard(data *UserData) {
 	<div class="container user">
 		<image
 			class="user-icon"
-			src="https://cdn4.iconfinder.com/data/icons/glyphs/24/icons_user2-256.png"
+			src="static/assets/user_icon_256.webp"
 			alt="Ícone de usuário"
 		></image>
 		<div class="user-credentials">
