--- a/website/web/template/user_login.templ
+++ b/website/web/template/user_login.templ
@@ -3,18 +3,14 @@ package template
 templ UserLogin() {
 	@doctype() {
 		@head("Login") {
-			<style>
-        main {
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
-          height: 100vh;
-        }
-      </style>
+			<link rel="stylesheet" href="/static/css/user_login.css"/>
+			<script type="module" src="/static/js/user_login.js"></script>
 		}
 		@body() {
 			<main class="container">
+				<span id="error-message">
+					O email ou a senha informados são inválidos
+				</span>
 				<form hx-post="/user/login">
 					<fieldset>
 						<label>
