feat: add pet monitoring

--- a/web/template/base.templ
+++ b/web/template/base.templ
@@ -14,10 +14,10 @@ templ head(title string) {
 		<title>{ title }</title>
 		<link
 			rel="icon"
-			type="image/png"
-			href="https://icons.iconarchive.com/icons/icons8/windows-8/256/Animals-Cat-Track-icon.png"
+			type="image/x-icon"
+			href="static/assets/pet_paw_favicon_256.ico"
 		/>
-		<link rel="stylesheet" href="/static/css/pico.min.css"/>
+		<link type="text/css" rel="stylesheet" href="/static/css/pico.min.css"/>
 		<script type="module" src="/static/js/htmx.min.js"></script>
 		{ children... }
 	</head>
