--- a/web/template/pet_list.templ
+++ b/web/template/pet_list.templ
@@ -1,7 +1,7 @@
 package template
 
 import (
-	"github.com/leakedmemory/prototyping-class-project-web/internal/models"
+	"github.com/leakedmemory/prototyping-class-project/internal/models"
 	"strconv"
 )
 
@@ -42,7 +42,7 @@ templ addPetModal() {
 					<input
 						name="name"
 						type="text"
-						placeholder="Insira o nome do pet"
+						placeholder="Mel, Luke"
 						required
 					/>
 				</label>
@@ -68,7 +68,7 @@ templ addPetModal() {
 					<input
 						name="breed"
 						type="text"
-						placeholder="Insira a raça do pet"
+						placeholder="Munchkin, Bobtail"
 						required
 					/>
 				</label>
@@ -77,7 +77,7 @@ templ addPetModal() {
 					<input
 						name="leashID"
 						type="text"
-						placeholder="Insida o número de identificação da coleira"
+						placeholder="1234"
 						required
 					/>
 				</label>
