--- a/web/template/user_signup.templ
+++ b/web/template/user_signup.templ
@@ -3,7 +3,7 @@ package template
 templ UserSignUp() {
 	@doctype() {
 		@head("Cadastro") {
-			<link rel="stylesheet" href="/static/css/user_login.css"/>
+			<link type="text/css" rel="stylesheet" href="/static/css/user_login.css"/>
 			<script type="module" src="/static/js/user_login.js"></script>
 		}
 		@body() {
