--- a/web/template/home.templ
+++ b/web/template/home.templ
@@ -3,9 +3,9 @@ package template
 templ Home(data UserData) {
 	@doctype() {
 		@head("Home") {
-			<link rel="stylesheet" href="/static/css/home.css"/>
-			<link rel="stylesheet" href="/static/css/pet_list.css"/>
-			<link rel="stylesheet" href="/static/css/user_card.css"/>
+			<link type="text/css" rel="stylesheet" href="/static/css/home.css"/>
+			<link type="text/css" rel="stylesheet" href="/static/css/pet_list.css"/>
+			<link type="text/css" rel="stylesheet" href="/static/css/user_card.css"/>
 			<script type="module" src="/static/js/pet_list.js"></script>
 		}
 		@body() {
