--- a/web/static/css/pet_list.css
+++ b/web/static/css/pet_list.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 15px;
+  margin-bottom: 5px;
   width: 100%;
 }
 
@@ -27,9 +27,10 @@
 }
 
 .pets-container {
-  max-height: 370px;
+  max-height: 310px;
   overflow-y: scroll;
   scrollbar-width: none;
+  /*needed to display the shadow*/
   padding-bottom: 10px;
 }
 
@@ -38,48 +39,4 @@
   flex-direction: column;
   gap: 10px;
   overflow: visible;
-}
-
-.pet-card {
-  display: flex;
-  justify-content: space-between;
-  padding: 5px;
-  line-height: 30px;
-  border-style: solid;
-  border-radius: 10px;
-  border-width: 1px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-}
-
-.pet-card-data-column {
-  display: flex;
-  flex-direction: column;
-}
-
-.pet-card-delete-column {
-  padding-right: 10px;
-}
-
-.pet-card-delete-icon {
-  width: 1em;
-  cursor: pointer;
-}
-
-.pet-card-icon {
-  width: 1.2em;
-}
-
-.pet-card-data-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.pet-card-data {
-  padding-left: 5px;
-}
-
-.delete-pet-confirm {
-  color: var(--pico-del-color);
-  border-color: var(--pico-del-color);
 }
