--- a/web/static/css/user_card.css
+++ b/web/static/css/user_card.css
@@ -1,3 +1,7 @@
+.container.user {
+  position: relative;
+}
+
 .user {
   margin-bottom: 25px;
   border-style: solid;
@@ -5,6 +9,14 @@
   border-width: 1px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   padding: 15px;
+}
+
+.user-card-header {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  position: relative;
+  padding-top: 20px;
 }
 
 .user-icon-wrapper {
@@ -17,6 +29,20 @@
   width: 80px;
   height: auto;
   margin-bottom: 20px;
+}
+
+.logout-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: none;
+  border-style: none;
+  padding: 0;
+}
+
+.logout-icon {
+  width: 1em;
+  height: auto;
 }
 
 .user-card-credentials {
