--- a/web/template/pet_info.templ
+++ b/web/template/pet_info.templ
@@ -16,11 +16,11 @@ templ PetInfo(owner *models.User, pet *models.Pet) {
 					<div class="pet-info-wrapper">
 						<div class="owner-info">
 							<div class="photo-wrapper">
-								<image
+								<img
 									class="owner-photo"
 									src="static/assets/user_icon_256.webp"
 									alt="Imagem de perfil do dono"
-								></image>
+								/>
 							</div>
 							<div class="credentials">
 								<p>Nome: <span class="credential">{ owner.Name }</span></p>
@@ -30,11 +30,11 @@ templ PetInfo(owner *models.User, pet *models.Pet) {
 						</div>
 						<div class="pet-info">
 							<div class="photo-wrapper">
-								<image
+								<img
 									class="pet-photo"
 									src="static/assets/user_icon_256.webp"
 									alt="Foto do pet"
-								></image>
+								/>
 							</div>
 							<div class="credentials">
 								<p>Nome: <span class="credential">{ pet.Name }</span></p>
