--- a/web/template/user_card.templ
+++ b/web/template/user_card.templ
@@ -4,12 +4,24 @@ import "github.com/leakedmemory/prototyping-class-project/internal/models"
 
 templ userCard(user *models.User) {
 	<div class="container user">
-		<div class="user-icon-wrapper">
-			<image
-				class="user-icon"
-				src="static/assets/user_icon_256.webp"
-				alt="Ícone de usuário"
-			></image>
+		<div class="user-card-header">
+			<div class="user-icon-wrapper">
+				<img
+					class="user-icon"
+					src="static/assets/user_icon_256.webp"
+					alt="Ícone de usuário"
+				/>
+			</div>
+			<button
+				class="logout-button"
+				hx-post="/user/logout"
+			>
+				<img
+					class="logout-icon"
+					src="static/assets/logout_icon_256.webp"
+					alt="Ícone de logout"
+				/>
+			</button>
 		</div>
 		<div class="user-card-credentials">
 			<p>
