--- a/web/template/pet_qrcode.templ
+++ b/web/template/pet_qrcode.templ
@@ -1,25 +1,17 @@
 package template
 
-templ PetQRCode(data string) {
+templ PetQRCode(base64Img string) {
 	@doctype() {
 		@head("Pet QR Code") {
-			<style>
-				.pet-qrcode-wrapper {
-					display: flex;
-					justify-content: center;
-					align-items: center;
-					height: 100vh;
-				}
-				.pet-qrcode-image {
-					max-width: 80%;
-					max-height: 80%;
-				}
-			</style>
+			<link type="text/css" rel="stylesheet" href="/static/css/pet_qrcode.css"/>
 		}
 		@body() {
-			<div class="pet-qrcode-wrapper">
-				<img class="pet-qrcode-image" src={ "data:image/png;base64," + data } alt="Pet QR Code"/>
-			</div>
+			<main class="pet-qrcode-container">
+				<div class="pet-qrcode-wrapper">
+					<h2 class="pet-qrcode-header">Escaneie o QR Code para visualizar informações do pet</h2>
+					<img class="pet-qrcode-image" src={ "data:image/png;base64," + base64Img } alt="Pet QR Code"/>
+				</div>
+			</main>
 		}
 	}
 }
